--- a/modules/end-user-guide/partials/proc_using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-git-provider-access-token.adoc
@@ -54,9 +54,9 @@ type: Opaque
 <2> The Git provider name: `github` or `gitlab` or `bitbucket-server`.
 <3> The Git provider URL.
 <4> Your Git provider user ID, follow the API documentation to retrieve the user object:
-* GitHub: link:https://docs.github.com/en/rest/users/users#get-a-user[Get a user]. Find the `id` value.
-* GitLab: link:https://docs.gitlab.com/ee/api/users.html#for-normal-users[List users: For normal users], use the `username` filter: `/users?username=:username`. Find the `id` value.
-* Bitbucket Server: link:https://developer.atlassian.com/server/bitbucket/rest/v802/api-group-users/#api-users-userslug-get[Get users {userSlug}]. Find the `account_id` value.
+* GitHub: link:https://docs.github.com/en/rest/users/users#get-a-user[Get a user]. See the `id` value in the response.
+* GitLab: link:https://docs.gitlab.com/ee/api/users.html#for-normal-users[List users: For normal users], use the `username` filter: `/users?username=:username`. See the `id` value in the response.
+* Bitbucket Server: link:https://developer.atlassian.com/server/bitbucket/rest/v802/api-group-users/#api-users-userslug-get[Get users {userSlug}]. See the `account_id` value in the response.
 
 . Apply the Secret.
 +
