--- a/modules/end-user-guide/partials/proc_using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/partials/proc_using-a-git-provider-access-token.adoc
@@ -56,7 +56,7 @@ type: Opaque
 <4> Your Git provider user ID, follow the API documentation to retrieve the user object:
 * GitHub: link:https://docs.github.com/en/rest/users/users#get-a-user[Get a user]. See the `id` value in the response.
 * GitLab: link:https://docs.gitlab.com/ee/api/users.html#for-normal-users[List users: For normal users], use the `username` filter: `/users?username=:username`. See the `id` value in the response.
-* Bitbucket Server: link:https://developer.atlassian.com/server/bitbucket/rest/v802/api-group-users/#api-users-userslug-get[Get users {userSlug}]. See the `account_id` value in the response.
+* Bitbucket Server: link:https://developer.atlassian.com/server/bitbucket/rest/v802/api-group-users/#api-users-userslug-get[Get users]. See the `account_id` value in the response.
 
 . Apply the Secret.
 +
