--- a/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
+++ b/modules/administration-guide/pages/installing-che-on-minikube-keycloak-oidc.adoc
@@ -220,6 +220,7 @@ $ minikube start \
 
 . Configure {identity-provider} to create realm, client and user:
 +
+IMPORTANT: This step has to be performed every time the minikube cluster is started.
 [subs="+attributes"]
 ----
 $ {orch-cli} exec deploy/keycloak -n keycloak -- bash -c \
