--- a/modules/end-user-guide/nav.adoc
+++ b/modules/end-user-guide/nav.adoc
@@ -13,13 +13,13 @@
 *** xref:url-parameter-for-the-devfile-file-name.adoc[]
 *** xref:url-parameter-for-the-devfile-file-path.adoc[]
 ** xref:basic-actions-you-can-perform-on-a-workspace.adoc[]
-** xref:authenticating-yourself-to-a-git-server-from-a-workspace.adoc[]
+** xref:authenticating-to-a-git-server-from-a-workspace.adoc[]
 * xref:customizing-workspace-components.adoc[]
 * xref:selecting-a-workspace-ide.adoc[]
 ** xref:selecting-an-ide-by-using-a-url-parameter.adoc[]
 ** xref:specifying-an-in-browser-ide-for-a-git-repository-by-using-che-editor.yaml.adoc[]
 * xref:using-credentials-and-configurations-in-workspaces.adoc[]
-** xref:using-a-git-credentials-store.adoc[]
+** xref:using-git-credentials.adoc[]
 ** xref:enabling-artifact-repositories-in-a-restricted-environment.adoc[]
 *** xref:enabling-maven-artifact-repositories.adoc[]
 *** xref:enabling-gradle-artifact-repositories.adoc[]
