--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -66,6 +66,7 @@
 **** xref:configuring-oauth-2-for-github.adoc[]
 **** xref:configuring-oauth-2-for-gitlab.adoc[]
 **** xref:configuring-oauth-1-for-bitbucket.adoc[]
+**** xref:configuring-oauth-2-for-bitbucket.adoc[]
 *** xref:configuring-the-administrative-user.adoc[]
 *** xref:removing-user-data.adoc[]
 * xref:managing-workloads-using-the-che-server-api.adoc[]
