--- a/modules/administration-guide/pages/oauth-for-github-gitlab-or-bitbucket.adoc
+++ b/modules/administration-guide/pages/oauth-for-github-gitlab-or-bitbucket.adoc
@@ -1,14 +1,15 @@
 :_content-type: CONCEPT
-:description: OAuth for GitHub, GitLab, or Bitbucket
+:description: OAuth for GitHub, GitLab, Bitbucket or Bitbucket SAAS
 :keywords: bitbucket
-:navtitle: OAuth for GitHub, GitLab, or Bitbucket
+:navtitle: OAuth for GitHub, GitLab, Bitbucket or Bitbucket SAAS
 // :page-aliases:
 
 [id="oauth-for-github-gitlab-or-bitbucket_{context}"]
-= OAuth for GitHub, GitLab, or Bitbucket
+= OAuth for GitHub, GitLab, Bitbucket or Bitbucket SAAS
 
 To enable users to work with remote Git repositories:
 
 * xref:configuring-oauth-2-for-github.adoc[]
 * xref:configuring-oauth-2-for-gitlab.adoc[]
 * xref:configuring-oauth-1-for-bitbucket.adoc[]
+* xref:configuring-oauth-2-for-bitbucket.adoc[]
