fix: page alias

--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -2,8 +2,7 @@
 :navtitle: Limiting the number of workspaces that a user can keep
 :description: Limiting the number of workspaces that a user can keep
 :keywords: administration guide, number, workspaces
-:page-aliases:
-//configuring-the-number-of-workspaces-that-a-user-can-create.adoc
+:page-aliases: configuring-the-number-of-workspaces-that-a-user-can-create.adoc
 
 [id="limiting-the-number-of-workspaces-that-a-user-can-keep_{context}"]
 = Limiting the number of workspaces that a user can keep 
