Revert "fix: dropping 'that'"
This reverts commit 62e41a1dd2dd28b158f658a10a2247692824df07.

--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -1,15 +1,15 @@
 :_content-type: PROCEDURE
-:navtitle: Limiting the number of workspaces a user can keep
-:description: Limiting the number of workspaces a user can keep
+:navtitle: Limiting the number of workspaces that a user can keep
+:description: Limiting the number of workspaces that a user can keep
 :keywords: administration guide, number, workspaces
 :page-aliases: configuring-the-number-of-workspaces-that-a-user-can-create.adoc
 
-[id="limiting-the-number-of-workspaces-a-user-can-keep_{context}"]
-= Limiting the number of workspaces a user can keep 
+[id="limiting-the-number-of-workspaces-that-a-user-can-keep_{context}"]
+= Limiting the number of workspaces that a user can keep 
 
 {prod-short} enables users to keep several workspaces in their dashboards.
 
-You can limit the number of workspaces a user can keep in the dashboard.
+You can limit the number of workspaces that a user can keep in the dashboard.
 
 .Procedure
 
