--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously.adoc
@@ -1,14 +1,14 @@
 :_content-type: PROCEDURE
-:navtitle: Limiting the number of workspaces a user can run simultaneously
-:description: Limiting the number of workspaces a user can run simultaneously
+:navtitle: Limiting the number of workspaces that a user can run simultaneously
+:description: Limiting the number of workspaces that a user can run simultaneously
 :keywords: administration guide, number, workspaces
 
-[id="limiting-the-number-of-workspaces-a-user-can-run-simultaneously_{context}"]
-= Limiting the number of workspaces a user can run simultaneously
+[id="limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously_{context}"]
+= Limiting the number of workspaces that a user can run simultaneously
 
 {prod-short} enables users to run multiple workspaces with different configurations simultaneously.
 
-You can limit the number of workspaces a user can run simultaneously.
+You can limit the number of workspaces that a user can run simultaneously.
 
 .Procedure
 
