fix: missing italics

--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -29,7 +29,7 @@ spec:
   components:
     cheServer:
       extraProperties:
-        CHE_LIMITS_USER_WORKSPACES_COUNT: "<number_of_kept_workspaces_per_user>"
+        CHE_LIMITS_USER_WORKSPACES_COUNT: "__<number_of_kept_workspaces_per_user>__"
 ----
 
 . To apply the configuration from the previous step so that users can keep only up to 5 workspaces, run the following command for the namespace from the first step:
