--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -15,7 +15,7 @@ You can set a limit on the number of workspaces that a user can keep in the dash
 
 .Procedure
 
-. Obtain the name of the {prod-short} namespace. The default is `{prod-namespace}`.
+. Get the name of the {prod-short} namespace. The default is `{prod-namespace}`.
 +
 [source,terminal,subs="+quotes"]
 ----
