--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously.adoc
@@ -12,7 +12,7 @@ You can limit the number of workspaces that a user can run simultaneously.
 
 .Procedure
 
-. Obtain the name of the {prod-short} namespace. The default is `{prod-namespace}`.
+. Get the name of the {prod-short} namespace. The default is `{prod-namespace}`:
 +
 [source,terminal,subs="+quotes"]
 ----
