--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -36,7 +36,7 @@ spec:
 +
 [NOTE]
 ====
-The default value of __<max_number_of_kept_workspaces_per_user>__ is `-1`, which means that users can keep an unlimited number of workspaces. If you set the value to a positive integer, users will be able to keep as many workspaces as the integer value.
+<1> Sets the maximum number of workspaces per user. The default value, `-1`, allows users to keep an unlimited number of workspaces. Use a positive integer to set the maximum number of workspaces per user.
 ====
 
 . To apply the configuration from step 2, run the following command for the namespace that you obtained in step 1:
