--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -46,5 +46,5 @@ spec:
 $ oc patch checluster/devspaces -n  _<{prod-namespace}>_ \ <1>
 --type='merge' -p '{"spec":{"components":{"cheServer":{"extraProperties":{"CHE_LIMITS_USER_WORKSPACES_COUNT":"__<max_number_of_kept_workspaces_per_user>__"}}}}}' <2>
 ----
-<1> The {prod-short} namespace that you obtained in step 1.
-<2> The `__<max_number_of_kept_workspaces_per_user>__` that you set for `CHE_LIMITS_USER_WORKSPACES_COUNT` in step 2.
+<1> The namespace you got in step 1.
+<2> The `__<max_number_of_workspaces_per_user>__` value you set in step 2.
