--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -39,7 +39,7 @@ spec:
 <1> Sets the maximum number of workspaces per user. The default value, `-1`, allows users to keep an unlimited number of workspaces. Use a positive integer to set the maximum number of workspaces per user.
 ====
 
-. To apply the configuration from step 2, run the following command for the namespace that you obtained in step 1:
+. Apply the configuration:
 +
 [source,terminal,subs="+quotes,attributes"]
 ----
