fix: response to lang review

--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously.adoc
@@ -38,4 +38,4 @@ $ oc patch checluster/devspaces -n  _<{prod-namespace}>_ \ <1>
 --type='merge' -p '{"spec":{"components":{"devWorkspace":{"runningLimit":"__<max_number_of_running_workspaces_per_user>__"}}}}' <2>
 ----
 <1> The {prod-short} namespace that you obtained in step 1.
-<2> The `__<max_number_of_running_workspaces_per_user>__` that you set for `runningLimit` in step 2.
+<2> The `__<max_number_of_running_workspaces_per_user>__` you set in step 2.
