fix: response to lang review

--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously.adoc
@@ -30,12 +30,12 @@ spec:
       runningLimit: "__<max_number_of_running_workspaces_per_user>__"
 ----
 
-. To apply the configuration from step 2, run the following command for the namespace that you obtained in step 1:
+. Apply the configuration:
 +
 [source,terminal,subs="+quotes,attributes"]
 ----
 $ oc patch checluster/devspaces -n  _<{prod-namespace}>_ \ <1>
 --type='merge' -p '{"spec":{"components":{"devWorkspace":{"runningLimit":"__<max_number_of_running_workspaces_per_user>__"}}}}' <2>
 ----
-<1> The {prod-short} namespace that you obtained in step 1.
+<1> The {prod-short} namespace that you got in step 1.
 <2> The `__<max_number_of_running_workspaces_per_user>__` you set in step 2.
