--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously.adoc
@@ -6,9 +6,7 @@
 [id="limiting-the-number-of-workspaces-that-a-user-can-run-simultaneously_{context}"]
 = Limiting the number of workspaces that a user can run simultaneously
 
-{prod-short} enables users to run multiple workspaces with different configurations simultaneously.
-
-You can limit the number of workspaces that a user can run simultaneously.
+Users can run multiple workspaces with different configurations simultaneously. To reduce demand on the cluster, you can limit the number of workspaces that each user can run simultaneously.
 
 .Procedure
 
