fix: clarify that it's user-specific and link to the Maven docs on the topic

--- a/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/using-credentials-and-configurations-in-workspaces.adoc
@@ -20,7 +20,7 @@ The mounting process uses the standard {kubernetes} mounting mechanism and requi
 
 You can create permanent mount points for various components:
 
-* Maven configuration, such as the `settings.xml` file 
+* Maven configuration, such as the link:https://maven.apache.org/settings.html[user-specific] `settings.xml` file 
 * SSH key pairs
 * AWS authorization tokens
 * Configuration files
