[modules] add CHE_INFRA_KUBERNETES_PORT, CHE_INFRA_KUBERNETES_PORT_443_TCP_ADDR, CHE_INFRA_KUBERNETES_PORT_443_TCP, CHE_INFRA_KUBERNETES_SERVICE_HOST to docs for kubernetes. These will be used in che-dashboard

--- a/modules/administration-guide/examples/system-variables.adoc
+++ b/modules/administration-guide/examples/system-variables.adoc
@@ -979,6 +979,37 @@ Default::: empty
 
 '''
 
+== `+CHE_INFRA_KUBERNETES_PORT+`
+
+Will set the value of KUBERNETES_PORT in che-dashboard. 
+
+Default::: empty
+
+'''
+
+== `+CHE_INFRA_KUBERNETES_PORT_443_TCP_ADDR+`
+
+Will set the value of KUBERNETES_PORT_443_TCP_ADDR in che-dashboard.
+
+Default::: empty
+
+'''
+
+== `+CHE_INFRA_KUBERNETES_PORT_443_TCP+`
+
+Will set the value of KUBERNETES_PORT_443_TCP in che-dashboard.
+
+Default::: empty
+
+'''
+
+== `+CHE_INFRA_KUBERNETES_SERVICE_HOST+`
+
+Will set the value of KUBERNETES_SERVICE_HOST in che-dashboard.
+
+Default::: empty
+
+'''
 
 [id="openshift-infra-parameters"]
 = OpenShift Infra parameters
