fix: minor edit based on downstream change

--- a/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
+++ b/modules/end-user-guide/examples/snip_che-table-of-supported-editors.adoc
@@ -1,6 +1,6 @@
 | link:https://github.com/eclipse-che/che-theia[Che-Theia]
 | `eclipse/che-theia/latest`
-| This is the default IDE that loads in a new workspace without the URL parameter.
+| This is the default IDE that loads in a new workspace when the URL parameter or `che-editor.yaml` is not used.
 
 | link:https://github.com/eclipse-che/che-theia[Che-Theia]
 | `eclipse/che-theia/next`
