docs: add a new step to the procedure

--- a/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
+++ b/modules/end-user-guide/pages/enabling-maven-artifact-repositories.adoc
@@ -82,6 +82,8 @@ data:
     </settings>
 ----
 
+. Optional: When using EAP-based devfiles, apply a second `settings-xml` configmap with the same content, a different name, and the `/home/jboss/.m2` mount path.
+
 . Apply the ConfigMap for the TrustStore initialization script:
 +
 [source,yaml,subs="+quotes,+attributes,+macros"]
