added vale check workaround

--- a/modules/end-user-guide/examples/snip_che-supported-languages.adoc
+++ b/modules/end-user-guide/examples/snip_che-supported-languages.adoc
@@ -1,3 +1,5 @@
+
+pass:[<!-- vale RedHat.TermsErrors = NO -->]
 Apache Camel K:: Stack with tooling ready to develop Integration projects with Apache Camel K
 Apache Camel based on Spring Boot:: Stack with environment ready to develop Integration projects with Apache Camel based on Spring Boot.
 Bash:: Stack with environment ready to develop bash scripts.
@@ -18,3 +20,4 @@ Python:: Python Stack with Python 3.8
 Quarkus REST API:: Quarkus stack with a default REST endpoint application sample
 Rust:: Rust Stack with Rust 1.57
 Scala:: Scala Stack with OpenJDK 11 and sbt 1.x
+pass:[<!-- vale RedHat.TermsErrors = YES -->]
