--- a/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
+++ b/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
@@ -12,9 +12,9 @@ By default, a user can run only one workspace at a time. You can enable users to
 
 . Get the name of the {prod-short} namespace. The default is `{prod-namespace}`:
 +
-[source,terminal,subs="+quotes"]
+[source,terminal,subs="+quotes,attributes"]
 ----
-$ oc get checluster --all-namespaces \
+$ {orch-cli} get checluster --all-namespaces \
   -o=jsonpath="{.items[*].metadata.namespace}"
 ----
 
@@ -33,7 +33,7 @@ spec:
 +
 [source,terminal,subs="+quotes,attributes"]
 ----
-$ oc patch checluster/devspaces -n _<{prod-namespace}>_ \ <1>
+$ {orch-cli} patch checluster/devspaces -n _<{prod-namespace}>_ \ <1>
 --type='merge' -p '{"spec":{"components": \
 {"devWorkspace":{"runningLimit": \
 "__<running_workspaces_limit>__"}}}}' <2>
