--- a/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
+++ b/modules/administration-guide/pages/limiting-the-number-of-workspaces-that-a-user-can-keep.adoc
@@ -9,18 +9,8 @@
 
 By default, users can keep an unlimited number of workspaces in the dashboard, but you can limit this number to reduce demand on the cluster.
 
-.Procedure
+This configuration is part of the `CheCluster` Custom Resource:
 
-. Get the name of the {prod-short} namespace. The default is `{prod-namespace}`.
-+
-[source,terminal,subs="+quotes,attributes"]
-----
-$ {orch-cli} get checluster --all-namespaces \
-  -o=jsonpath="{.items[*].metadata.namespace}"
-----
-
-. Configure the `CheCluster` Custom Resource. See xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[].
-+
 [source,yaml,subs="+quotes"]
 ----
 spec:
@@ -31,7 +21,17 @@ spec:
 ----
 <1> Sets the maximum number of workspaces per user. The default value, `-1`, allows users to keep an unlimited number of workspaces. Use a positive integer to set the maximum number of workspaces per user.
 
-. Apply the configuration:
+.Procedure
+
+. Get the name of the {prod-short} namespace. The default is `{prod-namespace}`.
++
+[source,terminal,subs="+quotes,attributes"]
+----
+$ {orch-cli} get checluster --all-namespaces \
+  -o=jsonpath="{.items[*].metadata.namespace}"
+----
+
+. Configure the `CHE_LIMITS_USER_WORKSPACES_COUNT`:
 +
 [source,terminal,subs="+quotes,attributes"]
 ----
@@ -41,4 +41,8 @@ $ {orch-cli} patch checluster/devspaces -n _<{prod-namespace}>_ \ <1>
 "__<kept_workspaces_limit>__"}}}}}' <2>
 ----
 <1> The {prod-short} namespace that you got in step 1.
-<2> The `__<kept_workspaces_limit>__` value that you set in step 2.
+<2> Your choice of the `__<kept_workspaces_limit>__` value.
+
+.Addtional resources
+
+* xref:using-the-cli-to-configure-the-checluster-custom-resource.adoc[]
