--- a/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
+++ b/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
@@ -33,7 +33,7 @@ $ {orch-cli} get checluster --all-namespaces \
 +
 [source,terminal,subs="+quotes,attributes"]
 ----
-$ {orch-cli} patch checluster/devspaces -n _<{prod-namespace}>_ \ <1>
+$ {orch-cli} patch checluster/{context} -n _<{prod-namespace}>_ \ <1>
 --type='merge' -p '{"spec":{"components": \
 {"devWorkspace":{"runningLimit": \
 "__<running_workspaces_limit>__"}}}}' <2>
