--- a/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
+++ b/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
@@ -34,9 +34,8 @@ $ {orch-cli} get checluster --all-namespaces \
 [source,terminal,subs="+quotes,attributes"]
 ----
 $ {orch-cli} patch checluster/{context} -n _<{prod-namespace}>_ \ <1>
---type='merge' -p '{"spec":{"components": \
-{"devWorkspace":{"runningLimit": \
-"__<running_workspaces_limit>__"}}}}' <2>
+--type='merge' -p \
+'{"spec":{"components":{"devWorkspace":{"runningLimit": "__<running_workspaces_limit>__"}}}}' <2>
 ----
 <1> The {prod-short} namespace that you got in step 1.
 <2> Your choice of the `__<running_workspaces_limit>__` value.
