--- a/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
+++ b/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
@@ -8,6 +8,8 @@
 
 By default, a user can run only one workspace at a time. You can enable users to run multiple workspaces simultaneously.
 
+NOTE: If using the default `common` (or `per-user`) storage method, users may experience problems with concurrently running workspaces if pods are distributed across nodes in the cluster. Switching to `per-workspace` storage, or using the `ephemeral` storage type, can help with this. 
+
 This configuration is part of the `CheCluster` Custom Resource:
 
 [source,yaml,subs="+quotes"]
