docs: procedure to repair the DevWorkspace Operator

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -76,4 +76,5 @@
 ** xref:upgrading-che-using-the-web-console.adoc[]
 ** xref:upgrading-che-using-the-cli-management-tool.adoc[]
 ** xref:upgrading-che-using-the-cli-management-tool-in-restricted-environment.adoc[]
+** xref:repairing-the-devworkspace-operator.adoc[]
 * xref:uninstalling-che.adoc[]
