--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
@@ -1,13 +1,11 @@
-//:_content-type: PROCEDURE
-pass:[<!-- vale RedHat.Spelling = NO -->]
-:navtitle: Repairing the {devworkspace} Operator
-:description: Repairing the {devworkspace} Operator
-:keywords: devworkspace, operator, repair
-pass:[<!-- vale RedHat.Spelling = YES -->]
+:_content-type: PROCEDURE
+:navtitle: Repairing the Dev Workspace Operator
+:description: Repairing the Dev Workspace Operator
+:keywords: dev-workspace, operator, repair
 :page-aliases: 
 
 [id="repairing-the-devworkspace-operator_{context}"]
-= Repairing the {devworkspace} Operator
+= Repairing the Dev Workspace Operator
 
 .Prerequisites
 
