--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
@@ -15,7 +15,7 @@
 
 . Delete the `devworkspace-controller` namespace that contains the failing pod.
 
-. Update `DevWorkspace` and `DevWorkspaceTemplate` CRDs by setting the conversion strategy to `None`:
+. Update `DevWorkspace` and `DevWorkspaceTemplate` Custom Resource Definitions (CRD) by setting the conversion strategy to `None`:
 +
 image::repairing-dwo/looking-up-custom-resource-definitions.png[]
 +
