--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
@@ -52,7 +52,7 @@ pass:[<!-- vale CheDocs.Attributes = YES -->]
 
 . Remove each {devworkspace} Operator CSV:
 +
-[source,terminal,subs="+quotes"]
+[subs="+quotes"]
 ----
 $ oc delete csv __<devworkspace-operator.vX.Y.Z>__ <1>
 ----
