--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
@@ -60,7 +60,7 @@ $ oc delete csv __<devworkspace-operator.vX.Y.Z>__ <1>
 
 . Re-create the {devworkspace} Operator subscription:
 +
-[source,terminal,subs="+attributes"]
+[subs="+attributes"]
 ----
 $ cat <<EOF | oc apply -f -
 apiVersion: operators.coreos.com/v1alpha1
