--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
@@ -80,7 +80,7 @@ EOF
 
 . Approve manual installation.
 
-. Verify that manual installation has succeeded:
+. Verify that the manual installation has succeeded:
 +
 image::repairing-dwo/verifying-success.png[]
 
