--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
@@ -78,7 +78,7 @@ spec:
 EOF
 ----
 
-. Approve manual installation.
+. Approve the manual installation.
 
 . Verify that the manual installation has succeeded:
 +
