fix: step 4 edit after testing after Robert's review feedback

--- a/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
+++ b/modules/administration-guide/pages/repairing-the-devworkspace-operator.adoc
@@ -80,7 +80,4 @@ EOF
 
 . Approve the manual installation.
 
-. Verify that the manual installation has succeeded:
-+
-image::repairing-dwo/verifying-success.png[]
-
+. In the OpenShift web console, go to menu:Operators[Installed Operators] and verify the *Succeeded* status of the *{devworkspace} Operator*.
