--- a/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
+++ b/modules/administration-guide/pages/enabling-users-to-run-multiple-workspaces-simultaneously.adoc
@@ -8,7 +8,7 @@
 
 By default, a user can run only one workspace at a time. You can enable users to run multiple workspaces simultaneously.
 
-NOTE: If using the default `common` (or `per-user`) storage method, users might experience problems with concurrently running workspaces if pods are distributed across nodes in the cluster. Switching to `per-workspace` storage, or using the `ephemeral` storage type, can help with this. 
+NOTE: If using the default storage method, users might experience problems when concurrently running workspaces if pods are distributed across nodes in a multi-node cluster. Switching from the per-user `common` storage strategy to the `per-workspace` storage strategy or using the `ephemeral` storage type can avoid or solve those problems.
 
 This configuration is part of the `CheCluster` Custom Resource:
 
